Add lombok, add spring security, some refactorting (#7)
Add Security to Project